# ramble

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ramble.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
backend/: .flake8  .gitignore  pyproject.toml
frontend/: package.json
