[tool.poetry]
name = "ramble"
version = "0.1.0"
description = ""
authors = ["Sebastian Battle <sabattle@eckerd.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
