[tool.poetry]
name = "ramble"
version = "0.1.0"
description = ""
authors = ["Sebastian Battle <sabattle@eckerd.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
commitizen = "^2.23.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[tool.black]
target_version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
